Fixing truncate inside row and nav elements

--- a/src/cdn/helpers/typography.css
+++ b/src/cdn/helpers/typography.css
@@ -108,6 +108,7 @@ h6.large {
   overflow: hidden;
   white-space: nowrap !important;
   text-overflow: ellipsis;
+  flex: inherit;
 }
 
 .truncate > * {
